--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: go mod download
+        
+      - name: Generate code
+        run: go generate ./...
 
       - name: Run tests with coverage
         run: go test ./... -coverprofile=coverage.txt
