--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
         
+      - name: Install gomock
+        run: go get go.uber.org/mock/mockgen@v0.5.0
+        
       - name: Generate code
         run: go generate ./...
 
