--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -31,10 +31,7 @@ jobs:
         run: go generate ./...
 
       - name: Run tests with coverage
-        run: go test ./... -coverprofile=coverage.txt
+        run: go test ./... -coverprofile=./cover.out -covermode=atomic -coverpkg=./...
 
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.txt
-          fail_ci_if_error: false
+      - name: go-test-coverage
+        uses: vladopajic/go-test-coverage@v2.12.0
