--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -31,7 +31,10 @@ jobs:
         run: go generate ./...
 
       - name: Run tests with coverage
-        run: go test ./... -coverprofile=./cover.out -covermode=atomic -coverpkg=./...
+        run: go test ./... -coverprofile=coverage.txt
 
-      - name: go-test-coverage
-        uses: vladopajic/go-test-coverage@v2.12.0
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.txt
+          fail_ci_if_error: false
